# spark-iceber

./: .env.dev.example  .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  Brewfile  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt  ruff.toml  spark-defaults.conf
iceberg-spark/: Dockerfile  spark-defaults.conf
ipython/startup/: 00-prettytables.py
jupyter-lab-spark/: Dockerfile  requirements.txt
notebooks/: pyspark.ipynb
src/api/themoviedb/: job.py  themoviedb.py
src/google_sheet/: ingest_job.py  ingestor.py  upload_job.py  uploader.py  uploadter.py
src/iceberg/: ingestor_example.py
src/util/: config.py  config_bigquery  connection_factory.py  credentials.py  file_system.py  google_sheet.py  iceberg.py  lazy.py  local_env.py  logging.py  metadata.py  secret_manager.py  spark_session_factory.py  table_copier.py
tests/fixtures/: argv.py  config.py  connection.py  file_system.py  settings.py  spark.py  utc.py
tests/google_sheet/: test_upload.py
tests/util/: test_config.py  test_file_system.py  test_google_sheet.py
