[project]
name = "iceberg-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.4",
    "polars>=1.27.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "pyiceberg[pyarrow]>=0.9.0",
    "duckdb>=1.2.2",
    "duckdb-engine>=0.17.0",
    "pyspark>=3.5.5",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "google-api-python-client>=2.168.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
]

